Update maintainers section in THANKS file

--- a/THANKS
+++ b/THANKS
@@ -5,9 +5,10 @@ the algorithms package. If your name is missing from the credits, please get
 in touch with the current maintainer of the package to correct this in the
 next relese.
 
-## Current Maintainer
+## Maintainers
 
-Rogério Theodoro de Brito (2005-present)
+* Raffi Khatchadourian (2025-)
+* Rogério Theodoro de Brito (2005-2017)
 
 ## Original Author
 
