--- a/algorithms.dtx
+++ b/algorithms.dtx
@@ -9,6 +9,7 @@
 
 Copyright 1994-2004   Peter Williams <pwil3058@bigpond.net.au>
 Copyright 2005-2017   Rogerio Theodoro de Brito <rbrito@ime.usp.br>
+Copyright 2025-       Raffi Khatchadourian <khatchad@hunter.cuny.edu>
 
 This document file is free software; you can redistribute it and/or
 modify it under the terms of the GNU Lesser General Public License as
